--- a/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
+++ b/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
@@ -1,11 +1,7 @@
-/* установим отступ 1rem от нижнего края элемента */
-.text-field {
-    margin-bottom: 1rem;
-}
 /* стили для input */
 .text-field__input {
-    width: 800px;
-    height: 50px;
+    width: 50px;
+    height: 40px;
     font-family: inherit;
     font-size: 20px;
     font-weight: 400;
@@ -13,5 +9,6 @@
     color: #212529;
     background-color: #fff;
     background-clip: padding-box;
-    border: 1px solid #bdbdbd;;
+    border: 1px solid #bdbdbd;
+
 }
