добавил кнопку во флойд и  добавил общий стиль для кнопок

--- a/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
+++ b/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
@@ -15,3 +15,10 @@
     background-clip: padding-box;
     border: 1px solid #bdbdbd;;
 }
+.button-style {
+    width: 100px;
+    height: 25px;
+    font-family: inherit;
+    font-size: 13px;
+    border-radius: 5px;
+}
