--- a/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
+++ b/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
@@ -17,4 +17,14 @@
     font-family: inherit;
     font-size: 13px;
     border-radius: 5px;
+    margin-top:10px;
+}
+.textboxtomatrix{
+    width:1000px;
+    height: 300px;
+    font-family: inherit;
+    font-size: 15px;
+    vertical-align: text-top;
+    border-radius: 8px;
+
 }
