--- a/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
+++ b/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
@@ -26,5 +26,11 @@
     font-size: 15px;
     vertical-align: text-top;
     border-radius: 8px;
-
+}
+.text-field_matrix {
+    width: 500px;
+    height: 250px;
+    font-family: inherit;
+    font-size: 50px;
+    border-radius: 6px;
 }
