--- a/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
+++ b/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
@@ -27,7 +27,7 @@
     vertical-align: text-top;
     border-radius: 8px;
 }
-.text-field_matrix {
+.textarea_matrix {
     width: 500px;
     height: 250px;
     font-family: inherit;
