--- a/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
+++ b/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
@@ -11,6 +11,14 @@
     background-clip: padding-box;
     border: 1px solid #bdbdbd;
 }
+h1 {
+    font-family: Verdana, Arial, Helvetica, sans-serif; /* Гарнитура текста */
+    font-size: 250%; /* Размер шрифта в процентах */
+}
+p {
+    font-family: Verdana;
+    font-size: 16pt; /* Размер шрифта в пунктах */
+}
 .button-style {
     width: 100px;
     height: 25px;
@@ -34,13 +42,12 @@
     font-size: 50px;
     border-radius: 6px;
 }
-.textarea_Euler {
-    width: 1000px;
-    height: 50px;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 16pt;
-    border-radius: 6px;
-}
 .txt_algn_centr {
     text-align: center; /* Выравнивание по центру */
+}
+
+.button-stl {
+    background-color: transparent;
+    border: 1px solid black;
+    border-radius: 4px;
 }
