--- a/BottleWebProject_922_3_VSHLS/static/content/bootstrap.css
+++ b/BottleWebProject_922_3_VSHLS/static/content/bootstrap.css
@@ -4086,6 +4086,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   max-height: 340px;
   padding-right: 15px;
   padding-left: 15px;
+  padding-top: 15px;
   overflow-x: visible;
   border-top: 1px solid transparent;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
