--- a/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
+++ b/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
@@ -48,6 +48,20 @@ p {
 
 .button-stl {
     background-color: transparent;
-    border: 1px solid black;
+    display: inline-block;
+    margin-bottom: 0;
+    font-family:Verdana;
+    font-size: 16px;
+    font-weight: normal;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    border: 1px solid;
     border-radius: 4px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
