Добавлен логотип на главную страницу, иконка в браузере, а также работа с Гамильтоновым циклом

--- a/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
+++ b/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
@@ -65,3 +65,13 @@ p {
     -o-user-select: none;
     user-select: none;
 }
+
+.logo-stl{
+    border-radius: 20px;
+    background-color: white;
+}
+
+.icon-stl {
+    width: 20px;
+    height: 20px;
+}
