Добавлен unit-тест для Гамильтонова цикла,  а также страница Гамильтонова цикла протестирована и отлажена на валидаторе W3C

--- a/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
+++ b/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
@@ -59,6 +59,11 @@ p {
     border-style: inset; /*solid;*/
     border-collapse: collapse;
 }
+
+content-centerer {
+    align-content:center
+}
+
 .button-stl {
     background-color: transparent;
     display: inline-block;
