Добавлены комментарии в методе Гамильтонова цикла. Отлажены unit-тесты Гамильтонова цикла

--- a/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
+++ b/BottleWebProject_922_3_VSHLS/static/content/Stylesheet1.css
@@ -60,6 +60,19 @@ p {
     border-collapse: collapse;
 }
 
+.brd-hamiltonian {
+    text-align:center;
+    align-self:center;
+    align-content: center;
+    border: 3px;
+    border-color: gray;
+    padding: 10px;
+    border-style: solid;
+    border-collapse:collapse;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
 content-centerer {
     align-content:center
 }
